[package]

name = "clap-validators"
version = "0.0.1"
authors = ["Kevin K. <kbknapp@gmail.com>"]
exclude = ["examples/*"]
description = "A collection of pre-defined argument value validators that can be dropped in to clap parsing"
repository = "https://github.com/kbknapp/clap-validators.git"
documentation = "http://kbknapp.github.io/clap-validators"
readme = "README.md"
license = "MIT/Apache 2.0"
keywords = ["argument", "validate", "arg", "parser", "parse"]

[dependencies]
clippy    = { version = "~0.0.48", optional = true }

[features]
default     = []
lints       = ["clippy", "nightly"]
nightly     = [] # for building with nightly and unstable features
unstable    = [] # for building with unstable features on stable Rust
debug       = [] # for building with debug messages
travis      = ["lints", "nightly"] # for building with travis-cargo

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[dev-dependencies]
clap = "~2.32"
